more refined error handeling
